feat: убраны 2 отдельных API для поиска, сам посик встроен внутрь роутеров, отдающих мемы
